<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">

    <Button
        android:id="@+id/historyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/go_to_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </SearchView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyButton">

        <TextView
            android:id="@+id/cardLengthTitle"
            style="@style/InfoTitle"
            android:text="@string/card_number_length"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/cardBrandValue" />

        <TextView
            android:id="@+id/cardLengthValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardLengthTitle" />

        <TextView
            android:id="@+id/cardLuhnTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_luhn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/cardLengthValue" />

        <TextView
            android:id="@+id/cardLuhnValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardLuhnTitle" />

        <TextView
            android:id="@+id/cardSchemeTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_scheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardSchemeValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardSchemeTitle" />

        <TextView
            android:id="@+id/cardTypeTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_type"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardTypeValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/cardTypeTitle" />

        <TextView
            android:id="@+id/cardPrepaidTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_prepaid"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardTypeValue" />

        <TextView
            android:id="@+id/cardPrepaidValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardPrepaidTitle" />

        <TextView
            android:id="@+id/cardCountryTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_country"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardPrepaidValue" />

        <TextView
            android:id="@+id/cardNameValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardCountryTitle" />

        <TextView
            android:id="@+id/cardLatLongValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintLeft_toRightOf="@+id/guideline2"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardNameValue" />

        <TextView
            android:id="@+id/cardBrandTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_brand"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/cardSchemeValue" />

        <TextView
            android:id="@+id/cardBrandValue"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardBrandTitle" />

        <TextView
            android:id="@+id/cardBankTitle"
            style="@style/InfoTitle"
            android:text="@string/bin_bank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardBankName"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardBankTitle" />

        <TextView
            android:id="@+id/cardBankUrl"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardBankName" />

        <TextView
            android:id="@+id/cardBankPhone"
            style="@style/InfoValue"
            android:text="@string/no_info_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/cardBankUrl" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>